...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/circle" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_bg"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/iv_cat"
            app:layout_constraintEnd_toEndOf="@id/iv_cat"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cat_name"
            tools:text="Lorem ipsum ... Some cat description here" />

        <Button
            android:id="@+id/btn_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
